# dashboard_instrumentacao

./: Diagrama sem nome.drawio  LICENSE  LOG_0.txt  Makefile  README.md  environment.yml  main.py  pyproject.toml
dashboard_instrumentacao/: Import_Calib_filter.py  Model.py  Theme.py  View.py  calls.py  controller.py  front.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: test_import.ipynb
references/: log_teste.txt
tests/: Teste_Model.py  Teste_Model_POO.py  Teste_controller.py  Teste_view.py  Testes isolados.py  log_teste.txt  style_text.py  test_data.py
