[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dashboard_instrumenta\u00e7\u00e3o"
version = "0.0.1"
description = "Dashboard para analises de instrumenta\u00e7\u00e3o"
authors = [
  { name = "Joshua" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dashboard_instrumentação"]
include = ["pyproject.toml", "dashboard_instrumentação/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dashboard_instrumentação"]
force-sort-within-sections = true

